# rs-swin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  README  README.md  criterion.toml  rust-toolchain.toml  rustfmt.toml  setup_dev.sh  tarpaulin.toml
.github/workflows/: benchmarks.yml  ci.yml  rust.yml
.run/: Benchmark Report.run.xml  Criterion.run.xml  Fast Test.run.xml  Fix.run.xml  Format.run.xml  Run firehose_loadtest.run.xml  Test.run.xml
crates/bimm/: Cargo.toml  README.md
crates/bimm-contracts/: Cargo.toml  README.md
crates/bimm-contracts-macros/: Cargo.toml  README.md
crates/bimm-contracts-macros/src/: lib.rs
crates/bimm-contracts-shapes/: Cargo.toml
crates/bimm-contracts-shapes/src/: contracts.rs  expressions.rs  lib.rs  math.rs  math_util.rs  shape_patterns.rs
crates/bimm-contracts/benches/: contracts.rs  math.rs
crates/bimm-contracts/src/: benchmarks.rs  bindings.rs  contracts.rs  expressions.rs  lib.rs  macros.rs  math.rs  shape_argument.rs
crates/bimm-contracts/src/support/: burn.rs  mod.rs
crates/bimm-firehose/: Cargo.toml  README.md
crates/bimm-firehose-image/: Cargo.toml  README.md
crates/bimm-firehose-image/src/: colortype_support.rs  lib.rs  loader.rs  test_util.rs
crates/bimm-firehose-image/src/augmentation/: mod.rs
crates/bimm-firehose-image/src/augmentation/control/: choose_one.rs  mod.rs  noop.rs  sequence.rs  with_prob.rs
crates/bimm-firehose-image/src/augmentation/noise/: blur.rs  mod.rs  speckle.rs
crates/bimm-firehose-image/src/augmentation/orientation/: flip.rs  mod.rs
crates/bimm-firehose-image/src/burn_support/: image_to_tensor_data.rs  mod.rs  pixeldepth_support.rs
crates/bimm-firehose/src/: lib.rs
crates/bimm-firehose/src/burn/: batcher.rs  mod.rs  path_scanning.rs
crates/bimm-firehose/src/core/: batch.rs  identifiers.rs  mod.rs  op_reg.rs  op_spec.rs  operators.rs  rows.rs  schema.rs  value_box.rs  valuebox.rs  values.rs
crates/bimm-firehose/src/core/operations/: environment.rs  executor.rs  factory.rs  mod.rs  operator.rs  planner.rs  registration.rs  runner.rs  signature.rs
crates/bimm-firehose/src/firehose/: batch.rs  identifiers.rs  mod.rs  operators.rs  rows.rs  schema.rs
crates/bimm-firehose/src/ops/: mod.rs
crates/bimm-firehose/src/ops/image/: aug.rs  color_util.rs  colortype_support.rs  loader.rs  mod.rs  tensor_conversion.rs  tensor_loader.rs  test_util.rs
crates/bimm-firehose/src/ops/image/augmentation/: legacy.rs  mod.rs  plugins.rs  stage.rs
crates/bimm-firehose/src/ops/image/augmentation/control/: choose_one.rs  mod.rs  noop.rs  sequence.rs  with_prob.rs
crates/bimm-firehose/src/ops/image/augmentation/noise/: blur.rs  mod.rs  speckle.rs
crates/bimm-firehose/src/ops/image/augmentation/orientation/: flip.rs  mod.rs
crates/bimm-firehose/src/ops/image/burn/: image_to_tensor_data.rs  mod.rs  pixeldepth_support.rs
crates/bimm-firehose/src/pipeline/: data_load_error.rs  data_load_operator.rs  data_load_plan.rs  data_load_schedule.rs  data_schedule_source.rs  mod.rs
crates/bimm-firehose/src/utility/: mod.rs  probability.rs
crates/bimm-swin/: Cargo.toml
crates/bimm-swin/src/: lib.rs
crates/bimm-swin/src/compat/: dims.rs  indexing.rs  mod.rs  ops.rs
crates/bimm-swin/src/contracts/: alt.rs  mod.rs
crates/bimm-swin/src/layers/: drop.rs
crates/bimm-swin/src/models/swin/v2/: patch_embed.rs  patch_merge.rs  swin_block.rs  transformer.rs  windowing.rs
crates/bimm-swin/src/models/swin/v2/window_attention/: attention_mask.rs  mod.rs  pos_bias.rs  pos_grid.rs
crates/bimm-swin/src/testing/: mod.rs
crates/bimm/benches/: drop_block.rs
crates/bimm/src/: lib.rs
crates/bimm/src/compat/: indexing.rs  linalg.rs  mod.rs  ops.rs
crates/bimm/src/compat/grid/: meshgrid.rs  mod.rs
crates/bimm/src/data/: error.rs  loader.rs  mod.rs  plan.rs  schedule.rs
crates/bimm/src/data/firehose/: batch.rs  operators.rs  rows.rs  schema.rs
crates/bimm/src/data/pipeline/: data_load_operator.rs  data_load_plan.rs  data_load_schedule.rs  data_schedule_source.rs
crates/bimm/src/data/plan/: load_operator.rs  load_plan.rs  load_schedule.rs  mod.rs
crates/bimm/src/data/source/: mod.rs
crates/bimm/src/data/table/: batch.rs  column_builder.rs  column_builders.rs  mod.rs  operators.rs  rows.rs  schema.rs
crates/bimm/src/layers/: drop.rs  mod.rs
crates/bimm/src/layers/activation/: activation_layer.rs  mod.rs
crates/bimm/src/layers/drop/: drop_block.rs  drop_path.rs  mod.rs  rate_table.rs
crates/bimm/src/layers/drop/path/: drop_block.rs  drop_path.rs  mod.rs  rate_table.rs  zspace.rs
crates/bimm/src/layers/patching/: mod.rs  patch_embed.rs
crates/bimm/src/models/: mod.rs
crates/bimm/src/models/resnet/: block.rs  mod.rs
crates/bimm/src/models/swin/: mod.rs
crates/bimm/src/models/swin/v2/: block_sequence.rs  drop_path_rate_table.rs  mod.rs  patch_embed.rs  patch_merge.rs  swin_block.rs  transformer.rs  windowing.rs
crates/bimm/src/models/swin/v2/window_attention/: attention_mask.rs  mod.rs  pos_bias.rs  pos_grid.rs
crates/bimm/src/testing/: mod.rs
crates/bimm/src/utility/: mod.rs  probability.rs  results.rs  zspace.rs
crates/bimm/src/utility/burn/: clamp.rs  distribution.rs  kernels.rs  mod.rs  noise.rs  shape.rs
crates/bimm/src/utility/burn/dynamic_modules/: dyn_mapper.rs  dyn_visitor.rs  mod.rs
crates/bimm/src/utility/burn/modwrapper/: dyn_mapper.rs
examples/firehose_loadtest/: Cargo.toml  README.md
examples/firehose_loadtest/src/: main.rs
examples/swin_tiny/: Cargo.toml  README.md
examples/swin_tiny/src/: data.rs  main.rs
src/: lib.rs
src/compat/: dims.rs  mod.rs  ops.rs
src/layers/: drop.rs
src/models/swin/v2/: block.rs  block_sequence.rs  dpr.rs  drop_path_rate_table.rs  layer.rs  mlp.rs  mod.rs  patch.rs  patch_embed.rs  patch_merge.rs  swin_block.rs  transformer.rs  windowing.rs
src/models/swin/v2/attention/: grid.rs  mask.rs  mod.rs  rpb.rs  swmsa.rs
src/models/swin/v2/window_attention/: attention_mask.rs
