[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
  "crates/*",
  "examples/*",
]

[workspace.package]
edition = "2024"
version = "0.2.1"
repository = "https://github.com/crutcher/bimm"
license = "MIT"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "warn"

[profile.test]
# Ensure proc-macros can find dependencies in RustRover tests.
rpath = true

# Patch to enable the gradient clipping cherry-pick
# [patch.crates-io]
# burn = { git = "https://github.com/tracel-ai/burn", rev = "250d5530c21e03909bd27f6e294dddb63ea0f6c8" }

[workspace.dependencies]
bimm = { version = "0.2.1", path = "crates/bimm" }
bimm-contracts = { version = "0.2.1", path = "crates/bimm-contracts" }
bimm-contracts-macros = { version = "0.2.1", path = "crates/bimm-contracts-macros" }
bimm-firehose = { version = "0.2.1", path = "crates/bimm-firehose" }

burn = { version = "^0.18.0" }

# Burn coupled-dependencies
globwalk = { version = "^0.9.1" }
serde = { version = "^1.0.219" }
serde_json = { version = "^1.0.142" }

clap = { version = "^4.5.44"}

rand = {  version = "^0.9.2"  }
regex = { version = "^1.11.1" }
regex-macro = { version = "^0.3.0" }
anyhow = { version = "^1.0.99" }
itertools = { version = "^0.14.0" }
threadpool = { version = "^1.8.1" }

image = { version = "^0.25.6" }

# macro dependencies
proc-macro2 = { version = "^1.0.97" }
syn = { version = "^2.0.104" }
quote = { version = "^1.0.40" }
inventory = { version = "^0.3.20" }

# Test and/or Examples dependencies
criterion = { version = "^0.7.0" }
hamcrest = { version = "^0.1.5" }
image-compare = { version = "^0.4.2" }
indoc = { version = "^2.0.6" }
num-traits = { version = "^0.2.19" }
tempfile = { version = "^3.20.0" }

rs-cinic-10-index = { version = "^0.2.0" }

