[package]
name = "bimm-contracts-macros"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
homepage = "https://github.com/crutcher/bimm/tree/main/crates/bimm-contracts"
description = "shape_contract![] proc-macro for bimm-contracts"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true, features = ["proc-macro"] }

