[package]
name = "bimm-contracts"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/crutcher/bimm/tree/main/crates/bimm-contracts"
documentation = "https://docs.rs/bimm-contracts/latest/"
description = "Runtime shape/geometry contracts for the burn framework."
keywords = ["burn", "contracts", "testing", "shape", "no_std"]
categories = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
bimm-contracts-macros = { version = "0.2.6", path = "../bimm-contracts-macros" }
burn = { workspace = true, optional = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
indoc = { workspace = true }

# Benchmark dependencies
criterion = { workspace = true }

[[bench]]
name = "contracts"
harness = false

[[bench]]
name = "math"
harness = false

[features]
default = ["burn_support"]
burn_support = ["burn"]
std = []
