[package]
name = "bimm-firehose"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
burn = { workspace = true, features = ["dataset", "vision"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

inventory = { workspace = true }

indoc = { workspace = true }

regex = { workspace = true }
regex-macro = { workspace = true }

image = { workspace = true, features = ["jpeg", "png", "gif", "serde"] }
image-compare = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }

tempfile = { workspace = true }

[features]
nightly = []

