[package]
name = "bimm-firehose"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/bimm-firehose/latest/"
description = "bimm dataloader / processing pipeline"

[lints]
workspace = true

[dependencies]
burn = { workspace = true, features = ["dataset", "vision"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

globwalk = { workspace = true }

anyhow = { workspace = true }

rand = { workspace = true, features = ["std"] }
# itertools = { workspace = true }
inventory = { workspace = true }
# threadpool = { workspace = true }

indoc = { workspace = true }

regex = { workspace = true }
regex-macro = { workspace = true }

image = { workspace = true, features = ["jpeg", "png", "gif", "serde"] }

# TODO: feature guard this dep behind a `test` feature.
image-compare = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }

tempfile = { workspace = true }

[features]
nightly = []


