[package]
name = "bimm-firehose"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/bimm-firehose/latest/"
description = "bimm dataloader / processing pipeline"

[lints]
workspace = true

[dependencies]
burn = { workspace = true, features = ["dataset", "vision"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

globwalk = { workspace = true }

anyhow = { workspace = true }

inventory = { workspace = true }

indoc = { workspace = true }

regex = { workspace = true }
regex-macro = { workspace = true }


[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }

