[package]
name = "bimm"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/bimm/latest/"
description = "burn image models"

[lints]
workspace = true

[dependencies]
bimm-contracts = { version = "0.3.1", path = "../bimm-contracts", features = ["burn"] }

burn = { workspace = true }
serde = { workspace = true, features = ["derive"] }

anyhow = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }

num-traits = { workspace = true }
hamcrest = { workspace = true }

[features]
nightly = []

