[package]
name = "firehose_loadtest"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bimm-firehose = { path = "../../crates/bimm-firehose"  }
bimm-firehose-image = { path = "../../crates/bimm-firehose-image"  }

anyhow = { workspace = true }
burn = { workspace = true, features = ["train", "autodiff", "cuda", "fusion", "vision", "dataset"] }
rs-cinic-10-index = { version = "^0.2.0" }
itertools = { workspace = true }

clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
