[package]
name = "firehose_loadtest"
publish = false
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bimm-firehose = { version = "0.2.4", path = "../../crates/bimm-firehose"  }
bimm-firehose-image = { version = "0.2.4", path = "../../crates/bimm-firehose-image"  }

anyhow = { workspace = true }
burn = { workspace = true, features = ["train", "autodiff", "cuda", "fusion", "vision", "dataset"] }
rs-cinic-10-index = { version = "^0.2.0" }
itertools = { workspace = true }

clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
