[package]
name = "swin_tiny"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bimm = { path = "../../crates/bimm" }
bimm-firehose = { path = "../../crates/bimm-firehose" }
bimm-firehose-image = { path = "../../crates/bimm-firehose-image" }

burn = { workspace = true, features = ["train", "autodiff", "cuda", "fusion", "vision", "dataset"] }
serde = { workspace = true, features = ["derive"] }

clap = { workspace = true, features = ["derive"] }

rand = { workspace = true }
anyhow = { workspace = true }

[features]
nightly = []