[package]
name = "swin_tiny"
publish = false
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bimm = { version = "0.3.1", path = "../../crates/bimm" }
bimm-firehose = { version = "0.3.1", path = "../../crates/bimm-firehose" }
bimm-firehose-image = { version = "0.3.1", path = "../../crates/bimm-firehose-image" }

burn = { workspace = true, features = ["train", "autodiff", "cuda", "fusion", "vision", "dataset"] }
serde = { workspace = true, features = ["derive"] }

clap = { workspace = true, features = ["derive"] }

rand = { workspace = true }
anyhow = { workspace = true }

[features]
nightly = []
